# laptimer

./: .gitignore  README.md
central/: CMakeLists.txt  sdkconfig
central/main/: CMakeLists.txt  central.c
photogate/: CMakeLists.txt
photogate/main/: CMakeLists.txt  photogate.c
